--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "@radix-ui/react-slot": "^1.0.2"
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "react-day-picker": "^8.10.1"
   },
   "devDependencies": {
     "typescript": "^5",
